src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from /Users/phamnguyenviettri/VoTien/BTL/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'str'", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
                     "'!'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "':='", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "':'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "IF", "ELSE", "FOR", "RETURN", 
                      "FUNC", "TYPE", "STRUCT", "INTERFACE", "STRING", "INT", 
                      "FLOAT", "BOOLEAN", "CONST", "VAR", "CONTINUE", "BREAK", 
                      "RANGE", "NIL", "TRUE", "FALSE", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "EQUAL", "NOTEQUAL", "LESS", "LESSEQUAL", 
                      "GREATER", "GREATEREQUAL", "AND", "OR", "NOT", "ASSIGN", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "COLON_ASSIGN", "DOT", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COLON", 
                      "COMMA", "ID", "INT_LIT", "BIN_LIT", "OCT_LIT", "HEX_LIT", 
                      "REAL", "ILLEGAL_ESCAPE", "STRING_LIT", "NEWLINE", 
                      "WS", "MULTI_COMMENT", "LINE_COMMENT", "UNCLOSE_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_literal = 1
    RULE_literal1 = 2
    RULE_literal3 = 3
    RULE_literal4 = 4
    RULE_array_literal = 5
    RULE_array_literal_rest = 6
    RULE_arraySupport = 7
    RULE_literal3List = 8
    RULE_struct_literalSP = 9
    RULE_struct_literal = 10
    RULE_struct_literal3 = 11
    RULE_field_init_list = 12
    RULE_field_init = 13
    RULE_list_expression = 14
    RULE_expression = 15
    RULE_logicalOrExpr = 16
    RULE_logicalAndExpr = 17
    RULE_equalityExpr = 18
    RULE_relationalExpr = 19
    RULE_additiveExpr = 20
    RULE_multiplicativeExpr = 21
    RULE_unaryExpr = 22
    RULE_primaryExpr = 23
    RULE_primaryExpr1 = 24
    RULE_postfixOps = 25
    RULE_basePrimary = 26
    RULE_basePrimary1 = 27
    RULE_postfixOp = 28
    RULE_arrayAccess = 29
    RULE_memberAccess = 30
    RULE_functionCall = 31
    RULE_argumentList = 32
    RULE_list_statement = 33
    RULE_statement = 34
    RULE_statement2 = 35
    RULE_statement3 = 36
    RULE_declared_statement = 37
    RULE_declared_statement2 = 38
    RULE_assign_statement = 39
    RULE_assign_statement2 = 40
    RULE_assignable2 = 41
    RULE_assignable = 42
    RULE_tail = 43
    RULE_tail2 = 44
    RULE_if_block = 45
    RULE_if_statement1 = 46
    RULE_else_statement = 47
    RULE_bodyBLOCK = 48
    RULE_else_if_statement = 49
    RULE_conditional_body_block = 50
    RULE_if_statement = 51
    RULE_block = 52
    RULE_blockIF = 53
    RULE_blockIF2 = 54
    RULE_for_statement = 55
    RULE_break_statement = 56
    RULE_continue_statement = 57
    RULE_call_statement = 58
    RULE_return_statement = 59
    RULE_declared = 60
    RULE_declared2 = 61
    RULE_declared3 = 62
    RULE_variables_declared = 63
    RULE_type_spec = 64
    RULE_constants_declared = 65
    RULE_constants_declared2 = 66
    RULE_constant_expression = 67
    RULE_function_declared = 68
    RULE_parameter_list = 69
    RULE_parameter = 70
    RULE_parameter_type = 71
    RULE_return_type = 72
    RULE_array_type = 73
    RULE_function_body = 74
    RULE_statement_with_newlines = 75
    RULE_statement_list = 76
    RULE_method_declared = 77
    RULE_parameter_list2 = 78
    RULE_parameter2 = 79
    RULE_receiver = 80
    RULE_receiver2 = 81
    RULE_struct_declared = 82
    RULE_field_list = 83
    RULE_field = 84
    RULE_interface_declared = 85
    RULE_optional_newlines = 86
    RULE_method_list = 87
    RULE_recursive_newlines = 88
    RULE_method_decl = 89
    RULE_method_signature = 90

    ruleNames =  [ "program", "literal", "literal1", "literal3", "literal4", 
                   "array_literal", "array_literal_rest", "arraySupport", 
                   "literal3List", "struct_literalSP", "struct_literal", 
                   "struct_literal3", "field_init_list", "field_init", "list_expression", 
                   "expression", "logicalOrExpr", "logicalAndExpr", "equalityExpr", 
                   "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "primaryExpr", "primaryExpr1", "postfixOps", 
                   "basePrimary", "basePrimary1", "postfixOp", "arrayAccess", 
                   "memberAccess", "functionCall", "argumentList", "list_statement", 
                   "statement", "statement2", "statement3", "declared_statement", 
                   "declared_statement2", "assign_statement", "assign_statement2", 
                   "assignable2", "assignable", "tail", "tail2", "if_block", 
                   "if_statement1", "else_statement", "bodyBLOCK", "else_if_statement", 
                   "conditional_body_block", "if_statement", "block", "blockIF", 
                   "blockIF2", "for_statement", "break_statement", "continue_statement", 
                   "call_statement", "return_statement", "declared", "declared2", 
                   "declared3", "variables_declared", "type_spec", "constants_declared", 
                   "constants_declared2", "constant_expression", "function_declared", 
                   "parameter_list", "parameter", "parameter_type", "return_type", 
                   "array_type", "function_body", "statement_with_newlines", 
                   "statement_list", "method_declared", "parameter_list2", 
                   "parameter2", "receiver", "receiver2", "struct_declared", 
                   "field_list", "field", "interface_declared", "optional_newlines", 
                   "method_list", "recursive_newlines", "method_decl", "method_signature" ]

    EOF = Token.EOF
    T__0=1
    IF=2
    ELSE=3
    FOR=4
    RETURN=5
    FUNC=6
    TYPE=7
    STRUCT=8
    INTERFACE=9
    STRING=10
    INT=11
    FLOAT=12
    BOOLEAN=13
    CONST=14
    VAR=15
    CONTINUE=16
    BREAK=17
    RANGE=18
    NIL=19
    TRUE=20
    FALSE=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    EQUAL=27
    NOTEQUAL=28
    LESS=29
    LESSEQUAL=30
    GREATER=31
    GREATEREQUAL=32
    AND=33
    OR=34
    NOT=35
    ASSIGN=36
    ADD_ASSIGN=37
    SUB_ASSIGN=38
    MUL_ASSIGN=39
    DIV_ASSIGN=40
    MOD_ASSIGN=41
    COLON_ASSIGN=42
    DOT=43
    LPAREN=44
    RPAREN=45
    LBRACE=46
    RBRACE=47
    LBRACK=48
    RBRACK=49
    SEMI=50
    COLON=51
    COMMA=52
    ID=53
    INT_LIT=54
    BIN_LIT=55
    OCT_LIT=56
    HEX_LIT=57
    REAL=58
    ILLEGAL_ESCAPE=59
    STRING_LIT=60
    NEWLINE=61
    WS=62
    MULTI_COMMENT=63
    LINE_COMMENT=64
    UNCLOSE_STRING=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclaredContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclaredContext,i)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.NEWLINE)
            else:
                return self.getToken(MiniGoParser.NEWLINE, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==61:
                self.state = 182
                self.match(MiniGoParser.NEWLINE)
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 188
            self.declared()
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2305843009213743296) != 0):
                self.state = 191
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6, 7, 14, 15]:
                    self.state = 189
                    self.declared()
                    pass
                elif token in [61]:
                    self.state = 190
                    self.match(MiniGoParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 196
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def REAL(self):
            return self.getToken(MiniGoParser.REAL, 0)

        def STRING_LIT(self):
            return self.getToken(MiniGoParser.STRING_LIT, 0)

        def HEX_LIT(self):
            return self.getToken(MiniGoParser.HEX_LIT, 0)

        def OCT_LIT(self):
            return self.getToken(MiniGoParser.OCT_LIT, 0)

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def array_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Array_literalContext,0)


        def struct_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_literalContext,0)


        def BIN_LIT(self):
            return self.getToken(MiniGoParser.BIN_LIT, 0)

        def NIL(self):
            return self.getToken(MiniGoParser.NIL, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_literal




    def literal(self):

        localctx = MiniGoParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        try:
            self.state = 209
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [54]:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.match(MiniGoParser.INT_LIT)
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.match(MiniGoParser.REAL)
                pass
            elif token in [60]:
                self.enterOuterAlt(localctx, 3)
                self.state = 200
                self.match(MiniGoParser.STRING_LIT)
                pass
            elif token in [57]:
                self.enterOuterAlt(localctx, 4)
                self.state = 201
                self.match(MiniGoParser.HEX_LIT)
                pass
            elif token in [56]:
                self.enterOuterAlt(localctx, 5)
                self.state = 202
                self.match(MiniGoParser.OCT_LIT)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 6)
                self.state = 203
                self.match(MiniGoParser.TRUE)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 204
                self.match(MiniGoParser.FALSE)
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 8)
                self.state = 205
                self.array_literal()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 9)
                self.state = 206
                self.struct_literal()
                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 10)
                self.state = 207
                self.match(MiniGoParser.BIN_LIT)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 11)
                self.state = 208
                self.match(MiniGoParser.NIL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def REAL(self):
            return self.getToken(MiniGoParser.REAL, 0)

        def STRING_LIT(self):
            return self.getToken(MiniGoParser.STRING_LIT, 0)

        def HEX_LIT(self):
            return self.getToken(MiniGoParser.HEX_LIT, 0)

        def OCT_LIT(self):
            return self.getToken(MiniGoParser.OCT_LIT, 0)

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def array_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Array_literalContext,0)


        def struct_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_literalContext,0)


        def BIN_LIT(self):
            return self.getToken(MiniGoParser.BIN_LIT, 0)

        def NIL(self):
            return self.getToken(MiniGoParser.NIL, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_literal1




    def literal1(self):

        localctx = MiniGoParser.Literal1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal1)
        try:
            self.state = 222
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [54]:
                self.enterOuterAlt(localctx, 1)
                self.state = 211
                self.match(MiniGoParser.INT_LIT)
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 2)
                self.state = 212
                self.match(MiniGoParser.REAL)
                pass
            elif token in [60]:
                self.enterOuterAlt(localctx, 3)
                self.state = 213
                self.match(MiniGoParser.STRING_LIT)
                pass
            elif token in [57]:
                self.enterOuterAlt(localctx, 4)
                self.state = 214
                self.match(MiniGoParser.HEX_LIT)
                pass
            elif token in [56]:
                self.enterOuterAlt(localctx, 5)
                self.state = 215
                self.match(MiniGoParser.OCT_LIT)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 6)
                self.state = 216
                self.match(MiniGoParser.TRUE)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 217
                self.match(MiniGoParser.FALSE)
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 8)
                self.state = 218
                self.array_literal()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 9)
                self.state = 219
                self.struct_literal()
                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 10)
                self.state = 220
                self.match(MiniGoParser.BIN_LIT)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 11)
                self.state = 221
                self.match(MiniGoParser.NIL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal3Context(ParserRuleContext):
        __slots__ = 'parser'
